# sims4-saver

./: .gitignore  README.md  build.bat  build.sh  convert_icon.py  icon.icns  multi-platform-strategy.md  pyproject.toml  requirements.txt  sims-saver.spec
.github/workflows/: pr_build.yml  release.yml
sims_saver/: __init__.py  localization.py  main.py  settings.json
