[project]
name = "sims-saver"
version = "1.0.0"
description = "Auto-save utility for The Sims 4"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "pynput>=1.7.0",
    "pyinstaller>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sims_saver"]

[project.scripts]
sims-saver = "sims_saver.main:main"
